// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`structural snapshot — client chooser > locks the three domain cards, their tags, CTAs and routes 1`] = `
"div [data-testid="client-chooser"]
  div
    div
      p "Choose a forecasting client"
      h2 "Which forecasting problem do you want to explore?"
      p "Each client drives a live synthetic panel shaped like its real one. The verified"
  div
    div [data-testid="domain-wind"]
      span
      span "Live synthetic sandbox"
      h3 "Offshore wind"
      p "Forecast the offshore-wind power feeding the operator reserve sizing."
      p [data-testid="domain-wind-note"] "Live panel is a synthetic sandbox shaped like the wind panel - not the Elia wind"
      div
        a [data-testid="domain-wind-cta" href="#/platform/market?panel=heterogeneous"]
          span "Watch a wind-like panel"
        a [data-testid="domain-wind-evidence" href="#/evidence"] "See the verified wind evidence"
    div [data-testid="domain-electricity"]
      span
      span "Live synthetic sandbox"
      h3 "Electricity imbalance"
      p "Forecast the imbalance price consumed on the settlement side."
      p [data-testid="domain-electricity-note"] "Live panel is a synthetic sandbox shaped like the electricity panel. The mechani"
      div
        a [data-testid="domain-electricity-cta" href="#/platform/market?panel=homogeneous"]
          span "Watch a near-homogeneous panel"
        a [data-testid="domain-electricity-evidence" href="#/evidence"] "See the verified electricity evidence"
    div [data-testid="domain-air_quality"]
      span
      span "Live synthetic sandbox"
      h3 "Air quality and chemistry"
      p "Forecast hourly PM2.5 from a panel of independent chemistry-transport models."
      p [data-testid="domain-air_quality-note"] "Live panel is a synthetic sandbox shaped like a chemistry-transport panel, not t"
      div
        a [data-testid="domain-air_quality-cta" href="#/platform/market?panel=chemistry_moe"]
          span "Watch a chemistry-transport panel"
        a [data-testid="domain-air_quality-evidence" href="#/evidence"] "See the verified CAMS evidence""
`;

exports[`structural snapshot — companion signposting > locks the market companion line structure 1`] = `
"p
  span
    svg
      path
      path
    span
      span "§2.1.3"
  span "Synthetic illustration. The real-data aggregate is in §4.2.""
`;

exports[`structural snapshot — forecast fan > locks the editable fan handles (slider roles) 1`] = `
"svg [data-testid="fan-edit" role="group" aria-label="Quantile forecast fan"]
  rect
  g
    line
    text "0.00"
  g
    line
    text "0.25"
  g
    line
    text "0.50"
  g
    line
    text "0.75"
  g
    line
    text "1.00"
  g
    rect [data-testid="fan-band-80%"]
    rect [data-testid="fan-band-60%"]
    rect [data-testid="fan-band-40%"]
    rect [data-testid="fan-band-20%"]
    line
    line
    line
    line
    line
    line
    line
    line
    line
  line
  text "median 0.50"
  g [role="slider" aria-label="Adjust forecast spread" tabindex="0"]
    line
    circle
    path
  g [role="slider" aria-label="Adjust forecast median" tabindex="0"]
    circle
    path
  text "normalised outcome""
`;

exports[`structural snapshot — forecast fan > locks the fan band group, median, ticks and outcome marker 1`] = `
"svg [data-testid="fan" role="img" aria-label="Quantile forecast fan"]
  rect
  g
    line
    text "0.00"
  g
    line
    text "0.25"
  g
    line
    text "0.50"
  g
    line
    text "0.75"
  g
    line
    text "1.00"
  g
    rect [data-testid="fan-band-80%"]
    rect [data-testid="fan-band-60%"]
    rect [data-testid="fan-band-40%"]
    rect [data-testid="fan-band-20%"]
    line
    line
    line
    line
    line
    line
    line
    line
    line
  line
  text "median 0.50"
  g [data-testid="fan-outcome"]
    line
    text "y = 0.55"
  text "normalised outcome""
`;

exports[`structural snapshot — market floor > locks the per-forecaster ribbons, aggregate band and outcome marker (seed 42) 1`] = `
"svg [data-testid="market-floor" role="img" aria-label="Market floor: each forecaster's quantile fan and the wager-weighted aggregate, a"]
  rect
  g
    line
    text
  g
    line
    text
  g
    line
    text
  g
    line
    text
  g
    line
    text
  rect
  g [data-testid="market-ribbon-0"]
    text
    rect
    rect
    line
    text
  g [data-testid="market-ribbon-1"]
    text
    rect
    rect
    line
    text
  g [data-testid="market-ribbon-2"]
    text
    rect
    rect
    line
    text
  g [data-testid="market-ribbon-3"]
    text
    rect
    rect
    line
    text
  g [data-testid="market-ribbon-4"]
    text
    rect
    rect
    line
    text
  g [data-testid="market-ribbon-5"]
    text
    rect
    rect
    line
    text
  line
  text
  line
  text
  text"
`;

exports[`structural snapshot — reliability diagram > locks the diagonal, axis ticks and one marker per quantile level 1`] = `
"svg [data-testid="reliability" role="img" aria-label="Calibration reliability diagram"]
  rect
  line
  text "perfect"
  g
    text "0.0"
    text "0.0"
  g
    text "0.5"
    text "0.5"
  g
    text "1.0"
    text "1.0"
  path
  circle [data-testid="reliability-point-0.1"]
  circle [data-testid="reliability-point-0.2"]
  circle [data-testid="reliability-point-0.3"]
  circle [data-testid="reliability-point-0.4"]
  circle [data-testid="reliability-point-0.5"]
  circle [data-testid="reliability-point-0.6"]
  circle [data-testid="reliability-point-0.7"]
  circle [data-testid="reliability-point-0.8"]
  circle [data-testid="reliability-point-0.9"]
  text "nominal quantile level τ"
  text "empirical coverage""
`;

exports[`structural snapshot — stat tiles > locks the headline tile with unit and delta 1`] = `
"div
  p "Mechanism vs uniform"
  div
    span "-7.1"
    span "%"
    span
      span "↓"
  p "aggregate CRPS gap""
`;

exports[`structural snapshot — stat tiles > locks the plain supporting tile 1`] = `
"div
  p "Deposits in"
  div
    span "12.40""
`;

exports[`structural snapshot — step ribbon > locks the non-interactive (disabled) ribbon shape 1`] = `
"ol [aria-label="Round steps"]
  li
    div
      button [data-testid="step-ribbon-step-0" type="button" aria-current="step" aria-label="Submit (round start), step 1 of 7" data-state="active" disabled]
        span
          span
        span
          span "1"
  li
    span
      span
    div
      button [data-testid="step-ribbon-step-1" type="button" aria-label="Deposit, step 2 of 7" data-state="todo" disabled]
        span
          span
        span
          span "2"
  li
    span
      span
    div
      button [data-testid="step-ribbon-step-2" type="button" aria-label="Gate, step 3 of 7" data-state="todo" disabled]
        span
          span
        span
          span "3"
  li
    span
      span
    div
      button [data-testid="step-ribbon-step-3" type="button" aria-label="Aggregate, step 4 of 7" data-state="todo" disabled]
        span
          span
        span
          span "4"
  li
    span
      span
    div
      button [data-testid="step-ribbon-step-4" type="button" aria-label="Outcome, step 5 of 7" data-state="todo" disabled]
        span
          span
        span
          span "5"
  li
    span
      span
    div
      button [data-testid="step-ribbon-step-5" type="button" aria-label="Score, step 6 of 7" data-state="todo" disabled]
        span
          span
        span
          span "6"
  li
    span
      span
    div
      button [data-testid="step-ribbon-step-6" type="button" aria-label="Settle (round end), step 7 of 7" data-state="todo" disabled]
        span
          span
        span
          span "7""
`;

exports[`structural snapshot — step ribbon > locks the seven steps, their states and bookend labels (interactive) 1`] = `
"ol [aria-label="Round steps"]
  li
    div
      button [data-testid="step-ribbon-step-0" type="button" aria-label="Submit (round start), step 1 of 7" data-state="done" tabindex="-1"]
        span
          span
        span
          span "✓"
  li
    span
      span
    div
      button [data-testid="step-ribbon-step-1" type="button" aria-label="Deposit, step 2 of 7" data-state="done" tabindex="-1"]
        span
          span
        span
          span "✓"
  li
    span
      span
    div
      button [data-testid="step-ribbon-step-2" type="button" aria-label="Gate, step 3 of 7" data-state="done" tabindex="-1"]
        span
          span
        span
          span "✓"
  li
    span
      span
    div
      button [data-testid="step-ribbon-step-3" type="button" aria-current="step" aria-label="Aggregate, step 4 of 7" data-state="active" tabindex="0"]
        span
          span
        span
          span "4"
  li
    span
      span
    div
      button [data-testid="step-ribbon-step-4" type="button" aria-label="Outcome, step 5 of 7" data-state="todo" tabindex="-1"]
        span
          span
        span
          span "5"
  li
    span
      span
    div
      button [data-testid="step-ribbon-step-5" type="button" aria-label="Score, step 6 of 7" data-state="todo" tabindex="-1"]
        span
          span
        span
          span "6"
  li
    span
      span
    div
      button [data-testid="step-ribbon-step-6" type="button" aria-label="Settle (round end), step 7 of 7" data-state="todo" tabindex="-1"]
        span
          span
        span
          span "7""
`;

exports[`structural snapshot — trajectory chart > locks the per-series paths, end markers and labels 1`] = `
"svg [data-testid="traj" role="img" aria-label="bankroll"]
  rect
  g
    line
    text "0.08"
  g
    line
    text "0.19"
  g
    line
    text "0.31"
  g
    line
    text "0.42"
  g
    path
    g
      circle
      text "mechanism"
  g
    path
    g
      circle
      text "uniform"
  text "round"
  text "wealth""
`;

exports[`structural snapshot — transport controls > locks the play/step/scrub/speed toolbar shape 1`] = `
"div [role="toolbar" aria-label="Market playback"]
  button [type="button" aria-label="Previous round" disabled]
    span "←"
  button [data-testid="transport-toggle" type="button" aria-label="Play"]
    span "Play"
  button [type="button" aria-label="Next round"]
    span "→"
  button [type="button" aria-label="Restart"]
    span "Restart"
  input [data-testid="round-scrubber" type="range" aria-label="Scrub round"]
  div [role="group" aria-label="Playback speed"]
    span "Speed"
    button [type="button" aria-pressed="false"]
      span "Slow"
    button [type="button" aria-pressed="true"]
      span "Steady"
    button [type="button" aria-pressed="false"]
      span "Brisk"
  span [aria-live="polite"] "Round 1 / 80""
`;
